# Citation-aware-fine-tuning

./: .gitignore  README.md  pyproject.toml
data/processed/: dataset.jsonl  dataset_oracle.jsonl
scripts/: fine_tune_qwen3.slurm
training/: collator.py  train.py
utils/: prepare_dataset.py  prepare_dataset_oracle.py
